Notify_tracing() misplaced for intended purpose

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • svc
    • b126

      The intent when putting in the notify_tracing() hook into debug.cpp (report_java_out_of_memory()) was to intercept a state believed to be a VM termination state, especially when OOME is thrown. Since it is totally valid that Java code catches OOME, and this location actually goes back to Java, this is the wrong location for this hook.

      In addition, the hook should not be typed for OOME only, but generic for any exit condition (normal / OOME / crash).

      This should instead have been put into java.cpp (before_exit()) and in VMError.cpp (report_vm_die()).

            Assignee:
            Markus Grönlund
            Reporter:
            Markus Grönlund
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: