8158033: Notify_tracing() misplaced for intended purpose

Reviewed-by: egahlin, dholmes